define better margin, delete overflow issue, add media querie for xl screen and lg in progress

--- a/style/style-desktop-1920.scss
+++ b/style/style-desktop-1920.scss
@@ -1,77 +1,3 @@
-@import "./variables";
-@import "./mixins";
-@import "./placeholders";
-
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  max-width: 100vw;
-}
-
-html {
-  height: 100%;
-  font-size: 62.5%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-body > * {
-  max-width: 100vw;
-  margin: auto;
-}
-
-body {
-  overflow-x: hidden;
-  font-family: $fontFamily-primary;
-  font-size: $ft-sm;
-  line-height: 1.5;
-  background-image: url("../public/img/Background-picture-copy.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 370vh;
-  background-color: $background-color;
-  color: $ft-color;
-}
-
-a {
-  text-decoration: none;
-  color: $ft-color;
-}
-
-a:hover {
-  font-weight: 800;
-  transform: scale(1.1, 1.1);
-}
-
-li {
-  list-style: none;
-}
-
-header::after {
-  content: "";
-  position: absolute;
-  top: 69vw;
-  left: 0;
-  right: 0;
-  width: 100vw;
-  height: 700px;
-  @extend %linear-style;
-}
-
-.navbar {
-  height: 12rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.navbar,
-header {
-  width: 100%;
-  max-width: 1760px;
-}
-
 h1 {
   font-weight: $ft-w-extraBold;
   color: $accent;
@@ -97,6 +23,26 @@ h1::before {
   top: -4px;
 }
 
+.article-title::before {
+  top: -9px;
+  margin-right: 20px;
+}
+
+h4 {
+  @extend %h4-style;
+}
+
+span {
+  @extend %font-logo;
+}
+
+.navbar {
+  height: 12rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav-link-bloc {
   display: flex;
   justify-content: space-between;
@@ -113,6 +59,31 @@ h1::before {
   width: 10rem;
 }
 
+header {
+  height: 64rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 55vh;
+}
+
+header::after {
+  content: "";
+  position: absolute;
+  top: 1040px;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  height: 700px;
+  @extend %linear-style;
+}
+
+.navbar,
+header {
+  width: auto;
+  max-width: 1760px;
+}
+
 .social-media-bloc,
 .progress-bloc {
   display: flex;
@@ -123,8 +94,7 @@ h1::before {
   justify-content: center;
   align-items: self-start;
   height: 40rem;
-  width: 10rem;
-  margin-right: 30rem;
+  width: 45rem;
 }
 
 .social-media-bloc > * {
@@ -178,7 +148,7 @@ h1::before {
   justify-content: space-between;
   position: fixed;
   top: 29rem;
-  right: 15vw;
+  right: 4%;
   z-index: 4;
 }
 
@@ -228,44 +198,17 @@ h1::before {
   height: 100%;
 }
 
-.article-title {
-  @extend %h2-style;
-}
-
-.article-title::before {
-  top: -9px;
-  margin-right: 20px;
-}
-
-.article-subtitle {
-  @extend %h3-style;
-}
-
-.number-article {
-  @extend %num-article;
-  position: absolute;
-}
-
-h4 {
-  @extend %h4-style;
-}
-
-span {
-  @extend %font-logo;
-}
-
-header {
-  height: 64rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: 98vh;
+main {
+  background-color: transparent;
+  width: 90vw;
+  margin: auto;
+  height: 260vh;
 }
 
 main::after {
   content: "";
   z-index: 2;
-  top: 84vw;
+  top: 1549px;
   left: 0;
   right: 0;
   width: 100%;
@@ -274,25 +217,9 @@ main::after {
   background: linear-gradient(to top, #0b1d26 10%, rgb(12 15 15 / 0%));
 }
 
-.article-img {
-  width: 76rem;
-  height: 92rem;
-}
-
-footer {
-  position: absolute;
-  height: 29vh;
+.section-homepage {
   width: 72vw;
-  display: grid;
-  grid-template-columns: repeat(10, 10%);
   margin: auto;
-}
-
-main {
-  background-color: transparent;
-  width: 90vw;
-  margin: auto;
-  height: 260vh;
 }
 
 .section-homepage:first-child {
@@ -311,31 +238,33 @@ main {
   height: 30rem;
 }
 
+.article-img {
+  @extend %article-img-desktop;
+}
+
 .article-homepage {
   display: grid;
-  grid-template-columns: repeat(11, 10%);
-  grid-template-rows: repeat(6, 5vw);
-  margin-bottom: 15vh;
+  grid-template-columns: repeat(10, 10%);
+  grid-template-rows: repeat(10, 3.7vw);
+  margin-bottom: 29vh;
 }
 
 .article-title {
+  @extend %h2-style;
+  grid-row: 3/ 4;
   grid-column: 2 / 5;
-}
-
-.article-title,
-.section-homepage .article-homepage:nth-child(even) .article-title {
-  grid-row: 2 / 3;
 }
 
 .section-homepage .article-homepage:nth-child(even) .article-title {
   grid-column: 6/10;
+  grid-row: 3/4;
 }
 
 .article-subtitle {
+  @extend %h3-style;
   display: inline-block;
   margin-bottom: 10px;
-  margin-top: unset;
-  grid-row: 3 / 4;
+  grid-row: 4/ 6;
   grid-column: 2 / 6;
 }
 
@@ -350,7 +279,7 @@ main {
   height: max-content;
   min-height: 160px;
   font-weight: 400;
-  grid-row: 5 / 7;
+  grid-row: 7 / 9;
   grid-column: 2 / 6;
 }
 
@@ -363,6 +292,7 @@ main {
   display: block;
   height: 50px;
   grid-column: 2 / 3;
+  grid-row: 9 / 10;
 }
 
 .section-homepage .article-homepage:nth-child(even) a {
@@ -372,19 +302,22 @@ main {
 
 .article-homepage a,
 .arrow-right {
-  grid-row: 6 / 7;
   margin-top: 2rem;
 }
 
 .article-img {
   align-self: flex-start;
   justify-self: end;
-  grid-column: 7/12;
+  grid-column: 7/11;
 }
 
 .section-homepage .article-homepage:nth-child(even) .article-img {
-  grid-column: 1/6;
-  justify-self: baseline;
+  grid-column: 2/5;
+}
+
+.number-article {
+  @extend %num-article;
+  position: absolute;
 }
 
 .section-homepage .article-homepage:nth-child(odd) .number-article {
@@ -395,15 +328,16 @@ main {
   right: 50rem;
 }
 
-.section-homepage .article-homepage:nth-child(even) .arrow-right {
-  grid-column: 7/8;
-  grid-row: 9/10;
-}
-
 .arrow-right {
   width: 30px;
   height: 20px;
   grid-column: 3/4;
+  grid-row: 9/10;
+}
+
+.section-homepage .article-homepage:nth-child(even) .arrow-right {
+  grid-column: 7/8;
+  grid-row: 9/10;
 }
 
 #first-article .number-article {
@@ -412,8 +346,15 @@ main {
 
 section,
 footer {
+  max-width: 1462px;
+}
+
+footer {
+  height: 29vh;
+  width: 72vw;
+  display: grid;
+  grid-template-columns: repeat(10, 10%);
   margin: auto;
-  max-width: 1700px;
 }
 
 .mntn-copyright-bloc {
@@ -444,59 +385,4 @@ footer {
 footer li,
 h4 {
   margin-bottom: 2rem;
-}
-
-@include from(lg) {
-  header {
-    margin-bottom: 55vh;
-  }
-
-  section,
-  footer {
-    max-width: 1462px;
-  }
-
-  .article-homepage {
-    margin-bottom: 29vh;
-    grid-template-columns: repeat(10, 10%);
-    grid-template-rows: repeat(10, 3.7vw);
-  }
-
-  .article-img {
-    width: 56.6rem;
-    height: 72rem;
-  }
-
-  .article-title {
-    grid-row: 3/ 4;
-    grid-column: 2 / 5;
-  }
-
-  .article-subtitle {
-    grid-row: 4/ 6;
-    grid-column: 2 / 6;
-  }
-
-  .article-text {
-    grid-row: 7 / 9;
-    grid-column: 2 / 6;
-  }
-
-  .article-homepage a,
-  .arrow-right {
-    grid-row: 9 / 10;
-  }
-
-  .section-homepage .article-homepage:nth-child(even) .article-img {
-    grid-column: 2/5;
-  }
-
-  .section-homepage .article-homepage:nth-child(even) .number-article {
-    right: 50rem;
-  }
-
-  .section-homepage .article-homepage:nth-child(even) .arrow-right {
-    grid-column: 7/8;
-    grid-row: 9/10;
-  }
 }
